--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb+srv://viswa:3WMu80YKpC3aNUMC@usertasks.t21cazl.mongodb.net/register-data?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://viswateja:viswa12345@usertasks.t21cazl.mongodb.net/register-data
 PASSWORD=3WMu80YKpC3aNUMC
 EMAIL_USER=viswateja209@gmail.com
 EMAIL_PASSWORD=mkme xmii dxqg nhdo
